<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#037107"
    android:backgroundTint="#EDEBD6"

    tools:context=".MainActivity"
    tools:ignore="ExtraText"
    tools:visibility="visible">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-5dp" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="392dp"
        android:layout_height="185dp"
        android:layout_above="@+id/bt2"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="14dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/bt1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pharma"
        tools:ignore="MissingConstraints,VisualLintBounds" />

    <EditText
        android:id="@+id/address"
        android:layout_width="375dp"
        android:layout_height="88dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:text="@string/pharmacy_app"
        android:textColorHighlight="#0E0E0E"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints,TextFields,TextSizeCheck"
        tools:layout_editor_absoluteX="9dp" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:layout_above="@+id/bt1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="48dp"
        android:background="#364E37"
        android:paddingTop="30dp"
        android:text="@string/user"
        android:textColor="#FBFBFB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.358"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt1"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="179dp"
        android:background="#364E37"
        android:paddingTop="20dp"
        android:text="@string/admin"
        android:textColor="#F5F8F5"
        android:textColorHighlight="#82E686"
        android:textColorLink="#89D18B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="370dp" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="191dp"
        android:layout_marginBottom="47dp"
        android:backgroundTint="#CA0303"
        android:text="@string/exit"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt2"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/bt1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="234dp" />


</RelativeLayout>